# sky_travel

./: projet.tar.xz
agence/: Makefile  Makefile.am  Makefile.in  agence.glade  agence.gladep.bak  config.h  config.status  configure  configure.in
agence/autom4te.cache/: output.0  requests  traces.0  traces.1
agence/po/: Makefile  Makefile.in
agence/src/: Makefile  Makefile.am  Makefile.in  admin.txt  agence  callbacks.c  callbacks.h  fonction.c  fonction.h  interface.c  interface.h.bak  main.c  personne.c  personne.h
agence/src/.deps/: callbacks.Po  fonction.Po
project1/: Makefile  Makefile.in  config.status  configure  project1.glade.bak
project1/autom4te.cache/: output.0  requests  traces.0  traces.1
project1/po/: Makefile  Makefile.in
project1/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  greeting.c  greeting.h  interface.c  interface.h  main.c  project1
project1/src/.deps/: callbacks.Po  greeting.Po
